Resolve #2751  "GET-Requests für Profileinstellungen in POST ändern"
Closes #2751

Merge request studip/studip!1905

--- a/resources/assets/stylesheets/scss/buttons.scss
+++ b/resources/assets/stylesheets/scss/buttons.scss
@@ -141,14 +141,20 @@ button.styleless {
     background-color: unset;
     border: 0;
 }
+
 button.as-link {
+    border: 0;
     background-color: transparent;
-    border: none;
     color: var(--base-color);
     cursor: pointer;
-    margin: 0px;
-    padding: 0px;
-    &:hover {
+    line-height: 1em;
+    padding: 0;
+    &:hover,
+    &:active {
         color: var(--active-color);
+    }
+
+    @media not prefers-reduced-motion {
+        transition: color $transition-duration;
     }
 }
