--- a/resources/assets/stylesheets/scss/index.scss
+++ b/resources/assets/stylesheets/scss/index.scss
@@ -88,7 +88,7 @@ $gap-between-boxes: calc($login-page-margin / 2);
             font-size: 0.9em;
             padding: 10px;
 
-            a {
+            button {
                 text-decoration: underline;
             }
         }
