--- a/resources/assets/stylesheets/highcontrast.scss
+++ b/resources/assets/stylesheets/highcontrast.scss
@@ -1548,5 +1548,8 @@ button.skiplink {
             }
         }
     }
-
+}
+button.as-link {
+    text-decoration: underline;
+    color: $contrast-blue;
 }
