Werkzeugleiste für Courseware
Closes #2488

Merge request studip/studip!2005

--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -8,6 +8,7 @@
 @import './courseware/content-courses.scss';
 @import './courseware/dashboard.scss';
 @import './courseware/sortable.scss';
+@import './courseware/toolbar.scss';
 @import './courseware/widgets.scss';
 @import './courseware/wizards.scss';
 
