--- a/resources/assets/stylesheets/scss/courseware/sortable.scss
+++ b/resources/assets/stylesheets/scss/courseware/sortable.scss
@@ -36,6 +36,8 @@
 
 
 .cw-container-wrapper-edit {
+    width: calc(100% - 64px);
+
     .cw-structural-element-list {
         width: 100%;
         padding: 0;
