--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -94,6 +94,7 @@
 @import "scss/studip-selection";
 @import "scss/table_of_contents";
 @import "scss/tabs";
+@import "scss/talk-bubble";
 @import "scss/tooltip";
 @import "scss/tfa";
 @import "scss/tour";
