--- a/resources/assets/stylesheets/scss/sidebar.scss
+++ b/resources/assets/stylesheets/scss/sidebar.scss
@@ -78,7 +78,7 @@
     }
 
     .course-avatar-medium,
-    .stream-avatar-medium,
+    .institute-avatar-medium,
     .avatar-medium {
         max-width: 60px;
         height: 60px;
