--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -15,6 +15,9 @@
 @import './courseware/shelf.scss';
 @import './courseware/structural-element.scss';
 @import './courseware/containers/default-container.scss';
+@import './courseware/containers/accordion.scss';
+@import './courseware/containers/list.scss';
+@import './courseware/containers/tabs.scss';
 @import './courseware/blocks/default-block.scss';
 
 @import './courseware/layouts/collapsible.scss';
