--- a/resources/assets/stylesheets/scss/index.scss
+++ b/resources/assets/stylesheets/scss/index.scss
@@ -13,6 +13,16 @@ $gap-between-boxes: calc($login-page-margin / 2);
 #content {
     grid-column: 1 / 3;
     grid-row: 2 / 2;
+
+    &.loginpage {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 20px;
+        row-gap: 20px;
+        align-items: flex-start;
+        flex-basis: 450px;
+    }
 }
 
 #background-desktop {
@@ -36,14 +46,24 @@ $gap-between-boxes: calc($login-page-margin / 2);
     }
 }
 
+#login_flex {
+    display: flex;
+    flex-direction: row;
+    column-gap: 20px;
+    flex-wrap: wrap;
+    row-gap: 20px;
+    align-items: flex-start;
+}
+
 #loginbox {
-    background-color: rgba(255, 255, 255, 0.8);
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
+    background-color: var(--white);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
     padding: 20px;
     width: 450px;
+    float: left;
 
     header {
-        margin: 10px 0 0 10px;
+        margin: 0 0 0 0;
 
         h1 {
             border-bottom: 0;
@@ -56,7 +76,7 @@ $gap-between-boxes: calc($login-page-margin / 2);
             list-style-type: none;
             margin: 0;
             width: 450px;
-            padding: 0 10px;
+            padding-inline-start: 0;
 
             .login_link {
                 display: inline-block;
@@ -93,6 +113,10 @@ $gap-between-boxes: calc($login-page-margin / 2);
             }
         }
 
+        #contrast {
+            padding-bottom: 0;
+        }
+
         div.login_info {
             border-top: 1px solid var(--light-gray-color);
             font-size: 0.8em;
@@ -110,6 +134,38 @@ $gap-between-boxes: calc($login-page-margin / 2);
             margin-left: 12px;
         }
     }
+
+
+    input#loginname,
+    input#password {
+        display: initial;
+    }
+
+    input#password {
+        padding-right: 28px;
+    }
+
+    #password-toggle {
+        position: absolute;
+        right: 7px;
+        bottom: 0;
+        cursor: pointer;
+
+        #visible-password,
+        #invisible-password {
+        }
+    }
+}
+
+#faq_box {
+    background-color: var(--white);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    width: 450px;
+    float: left;
+    > header {
+        margin: 0 0 0 0;
+    }
 }
 
 #login-plugin-contents {
@@ -126,5 +182,26 @@ $gap-between-boxes: calc($login-page-margin / 2);
     .messagebox {
         margin-bottom: $gap-between-boxes;
         width: 418px;
+    }
+}
+
+::-ms-reveal {
+    display: none;
+}
+
+
+#login-form {
+    max-height: 300px;
+    overflow: hidden;
+    transition: max-height var(--transition-duration-slow) linear;
+
+    &.hide {
+        max-height: 0px;
+    }
+
+    #submit_login {
+        margin-top: 0 !important;
+        float: left !important;
+
     }
 }
