--- a/resources/assets/stylesheets/scss/forms.scss
+++ b/resources/assets/stylesheets/scss/forms.scss
@@ -70,6 +70,14 @@ form.default {
         }
     }
 
+    input[list] {
+        @include background-icon(arr_1down, clickable);
+
+        background-repeat: no-repeat;
+        background-position: center right 4px;
+        padding-right: 24px
+    }
+
     textarea:not(.size-l) + .ck-editor {
         max-width: $max-width-m;
     }
