--- a/resources/assets/stylesheets/scss/questionnaire.scss
+++ b/resources/assets/stylesheets/scss/questionnaire.scss
@@ -342,6 +342,85 @@ $width: 270px;
             color: var(--red);
         }
     }
+
+    .average {
+        position: absolute;
+        border-left: 2px solid var(--red);
+        height: 70px;
+        z-index: 1;
+        font-size: 0.7em;
+        padding-left: 5px;
+    }
+    .rangescale_center {
+        text-align: center;
+    }
+    .centerline {
+        border-top: 1px solid var(--base-color);
+        position: relative;
+        top: 35px;
+        margin-left: -5px;
+        margin-right: -5px;
+        z-index: 2;
+    }
+    .questionnaire-evaluation-circle-container {
+        text-align: center;
+        display: block;
+        .questionnaire-evaluation-circle {
+            width: 70px;
+            height: 70px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-left: auto;
+            margin-right: auto;
+            z-index: 3;
+            position: relative;
+            > .value {
+                border-radius: 100px;
+                color: var(--white);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: var(--base-color);
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+
+    .centerline {
+        border-top: 1px solid var(--base-color);
+        position: relative;
+        top: 35px;
+        margin-left: -5px;
+        margin-right: -5px;
+        z-index: 2;
+    }
+    .questionnaire-evaluation-circle-container {
+        text-align: center;
+        display: block;
+        .questionnaire-evaluation-circle {
+            width: 70px;
+            height: 70px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-left: auto;
+            margin-right: auto;
+            z-index: 3;
+            position: relative;
+            > .value {
+                border-radius: 100px;
+                color: white;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: var(--base-color);
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
 }
 
 .courseselector,
