--- a/resources/assets/stylesheets/scss/feedback.scss
+++ b/resources/assets/stylesheets/scss/feedback.scss
@@ -15,7 +15,8 @@ article.studip.feedback-stream {
             font-weight: normal;
             white-space: nowrap;
         }
-        > img:not(:first-child), > .feedback-star-rating{
+        > img:not(:first-child),
+        > .feedback-star-rating {
             margin-left: 8px;
         }
     }
@@ -25,11 +26,13 @@ article.studip.feedback-stream {
 }
 .feedback-entry-add {
     .rating {
-        label.checked img, label.hover img {
+        label.checked img,
+        label.hover img {
             opacity: 1;
         }
-        label img, label.out img {
-            opacity: .2;
+        label img,
+        label.out img {
+            opacity: 0.2;
         }
         label {
             font-size: 0;
@@ -57,7 +60,8 @@ article.studip.feedback-stream {
                 > span {
                     font-weight: bold;
                 }
-                .avatar-small, span {
+                .avatar-small,
+                span {
                     margin-right: 5px;
                 }
             }
@@ -66,7 +70,7 @@ article.studip.feedback-stream {
             white-space: nowrap;
             font-size: 0;
             .inactive {
-                opacity: .2;
+                opacity: 0.2;
             }
         }
         .date {
@@ -101,4 +105,139 @@ table.feedback {
     color: var(--content-color-10);
     background-color: var(--base-color);
     min-width: 20px;
+}
+
+/* * * * * * * * * * * *
+vue feedback components
+* * * * * * * * * * * */
+
+.five-stars-histogram {
+    display: flex;
+    max-width: 420px;
+    flex-wrap: wrap;
+
+    .five-stars-histogram-average {
+        padding: 0 2em 0 0;
+        margin: auto;
+        text-align: center;
+        .fraction {
+            margin: -10px 0;
+            .average {
+                font-size: 3em;
+                font-weight: 700;
+                margin-bottom: -8px;
+            }
+        }
+        .total {
+            font-size: 0.8em;
+            margin-top: -4px;
+        }
+    }
+    .five-stars-histogram-chart {
+        min-width: 260px;
+        span {
+            display: inline-block;
+            width: 2em;
+        }
+        img {
+            vertical-align: text-bottom;
+            margin-left: -2px;
+        }
+        .percentage {
+            display: inline-block;
+            background-color: var(--content-color-10);
+            width: calc(100% - 6em);
+            margin: 2px 10px;
+            .percentage-bar {
+                background-color: var(--yellow);
+                color: transparent;
+                min-width: 0px;
+                padding: 0;
+                margin: 0;
+            }
+        }
+    }
+
+    &.vertical {
+        width: 260px;
+        height: 230px;
+        margin-bottom: 1em;
+        .five-stars-histogram-average {
+            padding: 0;
+        }
+    }
+}
+
+.five-stars-input {
+    margin: 8px auto;
+
+    button {
+        border: none;
+        background: transparent;
+        padding: 0 14px;
+        cursor: pointer;
+    }
+}
+
+.feedback-dialog {
+    display: flex;
+    flex-wrap: wrap;
+
+    .feedback-dialog-content {
+        width: 540px;
+        padding-left: 3em;
+        h2 {
+            display: inline-block;
+            width: calc(100% - 40px);
+            margin: 0;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        .feedback-dialog-content-header {
+            border-bottom: solid thin var(--content-color-40);
+            padding-bottom: 4px;
+        }
+    }
+}
+
+.feedback-element-update,
+.feedback-entry-create {
+    background-color: var(--content-color-10);
+    padding: 1em;
+    margin: 8px 0 16px 0;
+
+    h3 {
+        margin: 0 0 1em 0;
+    }
+    textarea {
+        width: calc(100% - 8px);
+        height: 6em;
+        resize: none;
+    }
+    .button-wrapper {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        button.button {
+            margin: 8px 0 0 5px;
+        }
+    }
+}
+
+.feedback-entry-box {
+    display: flex;
+    margin-bottom: 1em;
+    padding: 8px;
+    border: solid thin var(--content-color-40);
+    .feedback-entry-box-avatar {
+        margin-right: 1em;
+    }
+    .feedback-entry-box-content {
+        flex-grow: 1;
+        h4 {
+            margin: 0 0 2px 0;
+        }
+    }
 }
