--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -22,6 +22,7 @@
 
 
 @import './courseware/layouts/call-to-action.scss';
+@import './courseware/layouts/collapsible.scss';
 @import './courseware/layouts/companion.scss';
 @import './courseware/layouts/import-zip.scss';
 @import './courseware/layouts/input-file.scss';
