--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -57,6 +57,7 @@
 @import "scss/globalsearch";
 @import "scss/links";
 @import "scss/lists";
+@import "scss/loading-skeleton.scss";
 @import "scss/messages";
 @import "scss/my_courses";
 @import "scss/mvv";
